--- a/package.json
+++ b/package.json
@@ -35,23 +35,24 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@tarojs/components": "3.0.21",
     "@tarojs/runtime": "3.0.21",
     "@tarojs/taro": "3.0.21",
-    "@tarojs/components": "3.0.21",
-    "vuex": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "vue": "^2.5.0",
     "vue-template-compiler": "^2.5.0",
-    "vue": "^2.5.0"
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
+    "@babel/core": "^7.8.0",
     "@tarojs/mini-runner": "3.0.21",
     "@tarojs/webpack-runner": "3.0.21",
-    "@babel/core": "^7.8.0",
+    "@types/webpack-env": "^1.13.6",
     "babel-preset-taro": "3.0.21",
-    "vue-loader": "^15.9.2",
-    "eslint-plugin-vue": "^6.x",
-    "eslint-config-taro": "3.0.21",
     "eslint": "^6.8.0",
-    "stylelint": "9.3.0"
+    "eslint-config-taro": "3.0.21",
+    "eslint-plugin-vue": "^6.x",
+    "stylelint": "9.3.0",
+    "vue-loader": "^15.9.2"
   }
 }
